--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
 title: CYS's Blogs
 description: Physics, math, computer science, and more.
 
+author:
+  name: Yushun Cheng
+  email: chengys@disroot.org
+
 theme: minima
 minima:
   skin: dark
