--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 title: CYS's Blogs
 description: Physics, math, computer science, and more.
 
-author:
-  name: Yushun Cheng
-  email: chengys@disroot.org
+author: Yushun Cheng
+email: chengys@disroot.org
 
 theme: minima
-minima:
-  skin: dark
