--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: CYS's Blogs
-description: Physics, math, computer science, and more.
+description: ""
 
 author: Yushun Cheng
 email: chengys@disroot.org
